- Fix implementation issues in authentication - Add tenant testing and authentication to integration tests - Add tenant-aware caches to goals, conditions, score and segment services - Update multi-tenancy documentation - Fix tenaent service - Add checks when creating tenants - Add new ROLE_UNOMI_TENANT for authorization - Lots more fixes